# compilers-tasks

./: CMakeLists.txt  README.md
app/: repl.cpp
links/: 1-lexer-intro.txt  1-lexer.md
src/: CMakeLists.txt
src/ast/: declarations.hpp  expressions.hpp  statements.hpp  syntax_tree.hpp
src/ast/visitors/: abort_visitor.hpp  print_visitor.hpp  return_visitor.hpp  visitor.hpp
src/codegen/: llvm-ir-generator.cpp  llvm-ir-generator.hpp
src/lex/: errors.hpp  ident_table.hpp  lexer.cpp  lexer.hpp  location.hpp  scanner.hpp  token.hpp  token_type.cpp  token_type.hpp
src/parse/: parse_decl.cpp  parse_error.hpp  parse_expr.cpp  parse_stmt.cpp  parse_type.cpp  parser.hpp  parser_aux.cpp
src/types/: type.hpp
src/types/check/: type_checker.cpp  type_checker.hpp
src/types/repr/: builtins.hpp  fn_type.hpp
tasks/: 01-lexer.md  02-ast-visitors.md  03-parser.md  04-symbol-tables.md  07-structures.md  08-pointers.md  1-lexer.md  10-HM-generalization.md  2-ast-visitors.md  2-parser.md  3-parser-draft-old.md  3-parser.md  4-symbol-tables.md  5-static-types.md  6-qbe-ir.md  7-structures.md  8-pointers.md  9-HM-unification.md  async.md  discuss-types.md  projects.md
tests/lex/: cases.cpp
tests/parse/: cases.cpp
